fix 圖片選區 box z-index

--- a/src/components/ImgGroupItem/style.scss
+++ b/src/components/ImgGroupItem/style.scss
@@ -8,7 +8,7 @@ $imgMargin: 10px;
 .imgGroupItem{
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1021;
   background-color: rgba(white, .5);
   .imgGroupBox{
     width: 500px;
